--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,13 @@
     }
   ],
   "require": {
-    "php": ">=7.1",
+    "php": ">=5.6.0",
     "illuminate/support": "5.*",
     "illuminate/database": "5.*"
   },
   "autoload": {
     "psr-4": {
-      "Zhyu\\Repositories\\": "src"
+      "Zhyu\\Repositories\\": "src/Repositories"
     }
   },
   "autoload-dev": {
