[composer.json] remove extra dev-master "extra": {                                            "branch-alias": {                                              "dev-master": "0.x-dev"                                            }                                          },

--- a/composer.json
+++ b/composer.json
@@ -29,10 +29,6 @@
       "Zhyu\\Tests\\Repositories\\": "tests/"
     }
   },
-  "extra": {
-    "branch-alias": {
-      "dev-master": "0.x-dev"
-    }
-  },
+  "minimum-stability": "dev",
   "prefer-stable": true
 }
