--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,10 @@
       "Zhyu\\Tests\\Repositories\\": "tests/"
     }
   },
-  "minimum-stability": "dev",
+  "extra": {
+    "branch-alias": {
+      "dev-master": "0.x-dev"
+    }
+  },
   "prefer-stable": true
 }
