--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "0.x-dev"
+      "1.0.0": "0.x-dev"
     }
   },
   "prefer-stable": true
