--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Zhyu\\Repository\\": "src/Repositories",
-      "Zhyu\\Tool\\": "src/Tools"
+      "Zhyu\\": "src/"
     }
   },
   "autoload-dev": {
