--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,12 @@
   "extra": {
     "branch-alias": {
       "dev-master": "0.1-dev"
-    }
+    },
+  "laravel": {
+      "providers": [
+        "Zhyu\\ZhyuPackagesServiceProvider"
+      ]
+    }  },
   },
   "prefer-stable": true
 }
