--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
   ],
   "require": {
     "php": ">=5.6.0",
-    "illuminate/support": "5.*",
-    "illuminate/database": "5.*",
-    "illuminate/auth": "^5.8"
+    "illuminate/support": "5.7",
+    "illuminate/database": "5.7",
+    "illuminate/auth": "5.7"
   },
   "autoload": {
     "psr-4": {
