--- a/composer.json
+++ b/composer.json
@@ -40,5 +40,8 @@
       ]
     }
   },
-  "prefer-stable": true
+  "prefer-stable": true,
+  "require-dev": {
+    "phpunit/phpunit": "^8.0"
+  }
 }
