--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
     "php": ">=5.6.0",
     "illuminate/support": ">=5.6.0",
     "illuminate/database": ">=5.6.0",
-    "illuminate/auth": ">=5.6.0",
-    "larapack/config-writer": "1.*"
+    "illuminate/auth": ">=5.6.0"
   },
   "autoload": {
     "psr-4": {
