--- a/composer.json
+++ b/composer.json
@@ -16,32 +16,40 @@
   ],
   "require": {
     "php": ">=5.6.0",
-    "illuminate/support": ">=5.6.0",
+    "illuminate/auth": ">=5.6.0",
+    "illuminate/config": ">=5.6.0",
     "illuminate/database": ">=5.6.0",
-    "illuminate/auth": ">=5.6.0"
+    "illuminate/support": ">=5.6.0",
+    "maatwebsite/excel": ">=3.1",
+    "league/csv": "^9.2"
   },
   "autoload": {
-    "psr-4": {
-      "Zhyu\\": "src/"
+     "psr-4": {
+       "Zhyu\\": "src/"
     }
   },
   "autoload-dev": {
-    "psr-4": {
-      "Zhyu\\Tests\\Packages\\": "tests/"
+     "psr-4": {
+       "Zhyu\\Tests\\Packages\\": "tests/"
     }
   },
   "extra": {
-    "branch-alias": {
-      "dev-master": "0.2.3-dev"
+     "branch-alias": {
+       "dev-master": "0.2.3-dev"
     },
     "laravel": {
-      "providers": [
-        "Zhyu\\ZhyuServiceProvider"
-      ]
+       "providers": [
+         "Zhyu\\ZhyuServiceProvider"
+       ],
+      "aliases": {
+        "PdfReport": "Zhyu\\Facades\\PdfReport",
+        "ExcelReport": "Zhyu\\Facades\\ExcelReport",
+        "CSVReport": "Zhyu\\Facades\\CSVReport::class"
+      }
     }
   },
   "prefer-stable": true,
   "require-dev": {
-    "phpunit/phpunit": "^8.0"
+     "phpunit/phpunit": "^8.0"
   }
 }
