--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "illuminate/config": ">=5.6.0",
     "illuminate/database": ">=5.6.0",
     "illuminate/support": ">=5.6.0",
-    "maatwebsite/excel": ">=3.1",
+    "maatwebsite/excel": "^3.1",
     "league/csv": "^9.2"
   },
   "autoload": {
@@ -35,7 +35,7 @@
   },
   "extra": {
      "branch-alias": {
-       "dev-master": "0.2.3-dev"
+       "dev-master": "0.2.4-dev"
     },
     "laravel": {
        "providers": [
