--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,11 @@
     }
   ],
   "require": {
-    "php": ">=5.6.0",
-    "illuminate/auth": ">=5.6.0",
-    "illuminate/config": ">=5.6.0",
-    "illuminate/database": ">=5.6.0",
-    "illuminate/support": ">=5.6.0",
+    "php": ">=7.2.0",
+    "illuminate/auth": "5.8.*",
+    "illuminate/config": "5.8.*",
+    "illuminate/database": "5.8.*",
+    "illuminate/support": "5.8.*",
     "maatwebsite/excel": "^3.1",
     "league/csv": "^9.2"
   },
