--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     "illuminate/database": "^6.0",
     "illuminate/support": "^6.0",
     "maatwebsite/excel": "^3.1",
-    "league/csv": "^9.2"
+    "league/csv": "^9.2",
+    "laravel/helpers": "^1.1"
   },
   "autoload": {
      "psr-4": {
