--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
   ],
   "require": {
     "php": ">=7.2.0",
-    "illuminate/auth": "^6.0",
-    "illuminate/config": "^6.0",
-    "illuminate/database": "^6.0",
-    "illuminate/support": "^6.0",
+    "illuminate/auth": "^6.0|^7.0",
+    "illuminate/config": "^6.0|^7.0",
+    "illuminate/database": "^6.0|^7.0",
+    "illuminate/support": "^6.0|^7.0",
     "maatwebsite/excel": "^3.1",
     "league/csv": "^9.2",
     "laravel/helpers": "^1.1"
