--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     "illuminate/support": "^6.0|^7.0",
     "maatwebsite/excel": "^3.1",
     "league/csv": "^9.2",
-    "laravel/helpers": "^1.1"
+    "laravel/helpers": "^1.1",
+    "doctrine/dbal": "^2.10"
   },
   "autoload": {
      "psr-4": {
