--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "illuminate/database": "^6.0|^7.0|^8.0",
     "illuminate/support": "^6.0|^7.0|^8.0",
     "laravel/helpers": "^1.4",
-    "doctrine/dbal": "^3.0"
+    "doctrine/dbal": "^2.1|^3.0"
   },
   "autoload": {
      "psr-4": {
