--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
   ],
   "require": {
     "php": ">=7.2.5",
-    "illuminate/auth": "^6.0|^7.0|^8.0",
-    "illuminate/config": "^6.0|^7.0|^8.0",
-    "illuminate/database": "^6.0|^7.0|^8.0",
-    "illuminate/support": "^6.0|^7.0|^8.0",
+    "illuminate/auth": "^6.0|^7.0|^8.0|^9.0",
+    "illuminate/config": "^6.0|^7.0|^8.0|^9.0",
+    "illuminate/database": "^6.0|^7.0|^8.0|^9.0",
+    "illuminate/support": "^6.0|^7.0|^8.0|^9.0",
     "laravel/helpers": "^1.4",
     "doctrine/dbal": "^2.1|^3.0"
   },
